# energy_meter

./: main.py  packages.txt  pyproject.toml
data/: readings.csv
