[project]
name = "meter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pillow-heif>=1.1.0",
    "plotly>=6.3.0",
    "pytesseract>=0.3.13",
    "streamlit>=1.48.1",
    "streamlit-cropper>=0.3.1",
]
